# pyflow_acdc

./: .readthedocs.yaml  CITATION.cff  README.md  case24_MP_TEP.html  pyproject.toml
.github/workflows/: build-package-check.yml  docs-check.yml  pr-tests.yml  publish-to-pypi.yml  publish-to-testpypi.yml
docs/: case24_MP_TEP.html  case24_MP_TEP_inv_series.csv  index.rst  installation.rst  usage.rst
docs/api/: L_opf.rst  dash.rst  export_files.rst  folium.rst  grid.rst  grid_analysis.rst  grid_mod.rst  modelling.rst  opf.rst  plotting.rst  tep.rst  tep_dynamic.rst  tep_pymoo.rst  ts.rst  ts_mod.rst  wf_array.rst
example_grids/: case39.py
examples/: CrigeB4_OPF_Main.py  MATACDC_PF_main.py  Princess_Elisabeth.py
pyflow_acdc/: ACDC_Dynamic_TEP.py  ACDC_MultiPeriod_TEP.py  ACDC_OPF.py  ACDC_OPF_NL_model.py  ACDC_PF.py  ACDC_Static_TEP.py  ACDC_TEP_pymoo.py  ACDC_sequential_STEP.py  AC_L_CSS_gurobi.py  AC_L_CSS_ortools.py  AC_OPF_L_model.py  Array_OPT.py  Class_editor.py  Classes.py  Export_files.py  Graph_Dash.py  Graph_and_plot.py  Grid_creator.py  Mapping.py  Results_class.py  Time_series.py  Time_series_clustering.py  __init__.py  constants.py  grid_analysis.py  grid_creator.py  grid_modifications.py  solver_utils.py  windfarm_loader.py
pyflow_acdc/Cable_database/: ABB_XLPE_Al_110kV_sub_1000mm2.yaml  ABB_XLPE_Al_110kV_sub_185mm2.yaml  ABB_XLPE_Al_110kV_sub_240mm2.yaml  ABB_XLPE_Al_110kV_sub_300mm2.yaml  ABB_XLPE_Al_110kV_sub_400mm2.yaml  ABB_XLPE_Al_110kV_sub_500mm2.yaml  ABB_XLPE_Al_110kV_sub_630mm2.yaml  ABB_XLPE_Al_110kV_sub_800mm2.yaml  ABB_XLPE_Al_132kV_sub_1000mm2.yaml  ABB_XLPE_Al_132kV_sub_185mm2.yaml  ABB_XLPE_Al_132kV_sub_240mm2.yaml  ABB_XLPE_Al_132kV_sub_300mm2.yaml  ABB_XLPE_Al_132kV_sub_400mm2.yaml  ABB_XLPE_Al_132kV_sub_500mm2.yaml  ABB_XLPE_Al_132kV_sub_630mm2.yaml  ABB_XLPE_Al_132kV_sub_800mm2.yaml  ABB_XLPE_Al_150kV_sub_1000mm2.yaml  ABB_XLPE_Al_150kV_sub_240mm2.yaml  ABB_XLPE_Al_150kV_sub_300mm2.yaml  ABB_XLPE_Al_150kV_sub_400mm2.yaml  ABB_XLPE_Al_150kV_sub_500mm2.yaml  ABB_XLPE_Al_150kV_sub_630mm2.yaml  ABB_XLPE_Al_30kV_sub_120mm2.yaml  (+403 more)
pyflow_tests/: CigreB4_OPF.py  CigreB4_PF.py  _quick_fake_solve.py  array_sizing.py  case24_3zones_acdc_OPF.py  case39ac_LOPF.py  case39ac_OPF.py  case39acdc_OPF.py  folium_test.py  run_tests.py  sequential_array.py  sequential_array_ortools.py  test_OPF_quick_runner.py  test_cigreb4_pf.py  test_docs_add_components.py  test_docs_basic_grid_creation.py  test_docs_opf_quick.py  test_docs_power_flow.py  test_example_grids_smoke.py  test_examples_folder_smoke.py  test_grid_creation.py  test_matlab_loader.py  test_model_build_only.py  test_plot.py  tests_plot.py  ts_dash.py
(+50 files in other folders)
