[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "pyflow_acdc"
version = "0.5.1"
license = {file = "LICENSE"}
requires-python = ">= 3.10"

authors = [
   {name = "Bernardo Castro Valerio", email = "bernardo.castro@upc.edu"}]
 

maintainers = [
  {name ="Bernardo Castro Valerio", email = "bernardo.castro@upc.edu"}
]

description = "A python-based tool for the design and analysis of hybrid AC/DC grids"

readme = "README.md"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering',
]



dependencies = ["numpy",
                "pandas",
                "networkx",
                "matplotlib",
                "scipy",
                "prettytable",
                "plotly",
                "geopandas",
                "pyyaml",
                "shapely",
                "svgwrite",
                "scikit-learn",
                "kmedoids",
                "openpyxl",
                "dill",
                "xlsxwriter",
                "utm"]


[project.optional-dependencies]

mapping = ["folium",
           "branca"]

OPF = ["pyomo"]

Dash = ["dash"]

Array_OPT = ["ortools",
             "pyomo"]

TEP_pymoo = ["pymoo",
             "pyomo"]

Gurobi = ["gurobipy"]

plotting = ["kaleido"]

tests = ["pytest"]

All = ["folium",
       "branca",
       "pyomo",
       "dash",
       "ortools",
       "highs",
       "pymoo",
       "kaleido"]

[project.urls]
Repository     = "https://github.com/CITCEA-UPC/pyflow_acdc"
Documentation  = "https://pyflow-acdc.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["pyflow_acdc","pyflow_tests"]

[tool.setuptools.package-data]
"pyflow_acdc" = [
    "folium_images/*.png",
    "Cable_database/*.yaml",
    "example_grids/*.py",
    "example_grids/PF/*.py",
    "example_grids/OPF/*.py",
    "example_grids/TEP/*.py",
    "example_grids/TEP/*.csv",
    "example_grids/Wind_Array/*.py",
    "example_grids/wind_farm_data/*.py",
    "example_grids/wind_farm_data/*.pkl.gz",
    "example_grids/wind_farm_data/*.geojson"
]

[project.scripts]
pyflow-acdc-test = "pyflow_tests.run_tests:main"